Added saving and loading the trained model + reorganized code

--- a/logModel/All_Players_ImpactModel.ipynb
+++ b/logModel/All_Players_ImpactModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,22 +15,25 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "import json"
+    "import json\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import Scraped rib.gg Data\n",
-    "df = pd.read_csv(\"../Amer-VCT-Spring2023/data/EventEssentials+Players.csv\")"
+    "df = pd.read_csv(\"../Amer-VCT-Spring2023/data/EventEssentials+Players.csv\")\n",
+    "\n",
+    "#Can import your own training or testing data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load log reg model or skip to create new model. Can skip to the cell that creates testing set.\n",
+    "with open('impactModel.pkl', 'rb') as f:\n",
+    "    logreg = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +77,38 @@
     "\n",
     "#Train on group stage\n",
     "X_train = indVars[indVars['matchId_y'] < start_test_matchId].drop(columns=['matchId_y'])\n",
-    "Y_train = depVar[depVar['matchId_y'] < start_test_matchId].drop(columns=['matchId_y'])\n",
+    "Y_train = depVar[depVar['matchId_y'] < start_test_matchId].drop(columns=['matchId_y'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#do Logisistic Regression\n",
+    "logreg = LogisticRegression()\n",
+    "logreg.fit(X_train, Y_train.values.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save the log reg model for later use\n",
+    "with open('impactModel.pkl','wb') as f:\n",
+    "    pickle.dump(logreg, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_test_matchId = 112510\n",
     "\n",
     "#Test on playoffs\n",
     "X_test = indVars[indVars['matchId_y'] >= start_test_matchId].drop(columns=['matchId_y'])\n",
@@ -73,29 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression()"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#do Logisistic Regression\n",
-    "logreg = LogisticRegression()\n",
-    "logreg.fit(X_train, Y_train.values.ravel())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Renzjordan\\AppData\\Local\\Temp\\ipykernel_9548\\1285282499.py:2: FutureWarning: The pandas.np module is deprecated and will be removed from pandas in a future version. Import numpy directly instead.\n",
+      "C:\\Users\\Renzjordan\\AppData\\Local\\Temp\\ipykernel_12908\\1285282499.py:2: FutureWarning: The pandas.np module is deprecated and will be removed from pandas in a future version. Import numpy directly instead.\n",
       "  ass = pd.DataFrame(pd.np.empty((0, 8)))\n"
      ]
     }
@@ -341,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
